--- a/pages/auth/otp.html
+++ b/pages/auth/otp.html
@@ -40,7 +40,7 @@
                             تسجيل الخروج
                         </a>
                         <a href="" class=" text-green-600">
-                            <span class="fas fa-sign-in-alt icon font-17 mx-1"></span>
+                            <span class="hgi-stroke hgi-login-01 icon font-17 mx-1"></span>
                             تأكيد
                         </a>
                     </div>
