--- a/pages/auth/otp.html
+++ b/pages/auth/otp.html
@@ -29,7 +29,13 @@
                         <input type="text" class="otp-input" maxlength="1" data-index="1">
                         <input type="text" class="otp-input" maxlength="1" data-index="2">
                         <input type="text" class="otp-input" maxlength="1" data-index="3">
+                        <input type="text" class="otp-input" maxlength="1" data-index="4">
+                        <input type="text" class="otp-input" maxlength="1" data-index="5">
                     </div>
+                    <a href="" class="bg-green-600 text-white font-bold py-2 px-4 rounded-full flex items-center justify-center mb-5">
+                        <span class="hgi-stroke hgi-login-01 icon font-17 mx-1"></span>
+                        تأكيد
+                    </a>
                     <div class="flex items-center justify-center flex-wrap gap-5">
                         <button class=" text-gray-700">
                             <span class="hgi-stroke hgi-repeat icon mx-1"></span>
@@ -38,10 +44,6 @@
                         <a href="" class=" text-red-600">
                             <span class="hgi-stroke hgi-logout-04 icon font-17 mx-1"></span>
                             تسجيل الخروج
-                        </a>
-                        <a href="" class=" text-green-600">
-                            <span class="hgi-stroke hgi-login-01 icon font-17 mx-1"></span>
-                            تأكيد
                         </a>
                     </div>
                     <p class="text-center my-10">إذا كنت تواجه مشكلة في تسجيل الدخول تواصل مع خدمة العملاء
