--- a/pages/test/tree-digram.html
+++ b/pages/test/tree-digram.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tree Diagram</title>
-  <link rel="stylesheet" href="../../lib/treant-js-master/Treant.css">
-  <link rel="stylesheet" href="../../lib/treant-js-master/examples/basic-example/basic-example.css">
-  <script src="../../lib/treant-js-master/vendor/raphael.js"></script>
-  <script src="../../lib/treant-js-master/Treant.js"></script>
-</head>
-<body>
-  <div id="tree-simple" class="Treant"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Other settings</title>
+    <link rel="stylesheet" href="../../style.css" />
 
-  <script>
-    // Tree configuration
+    <link href="../../src/css/output.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css" rel="stylesheet" />
+
+    <script src="../../src/js/layout/sidebar.js" ></script>
+    <script src="../../src/js/layout/header.js" ></script>
+    <script src="../../src/js/layout/layout.js" ></script>
+    <script src="../../src/js/shared/steper.js" ></script>
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../../app.js"></script>
+
+    <link rel="stylesheet" href="../../lib/treant-js-master/Treant.css">
+    <link rel="stylesheet" href="../../lib/treant-js-master/examples/basic-example/basic-example.css">
+    <script src="../../lib/treant-js-master/vendor/raphael.js"></script>
+    <script src="../../lib/treant-js-master/Treant.js"></script>
+  </head>
+  <body dir="rtl" class="dark:bg-gray-800 bg-white">
+    <main-header
+    namee="محمد الشريف"
+    role="مشرف رئيسى"
+    />
+    <main-layout />
+    <div class="p-4 sm:mr-48" id="main-body">
+        <div id="tree-simple" class="Treant mt-20"></div>
+    </div>
+    <script>
+            // Tree configuration
     const simple_chart_config = {
       chart: {
         container: "#tree-simple",
@@ -48,6 +74,7 @@
 
     // Initialize the tree
     new Treant(simple_chart_config);
-  </script>
-</body>
+    </script>
+    <script defer src="../../sidebar.js"></script>
+  </body>
 </html>
