--- a/pages/auth/Register2-en.html
+++ b/pages/auth/Register2-en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شكرًا لتسجيلك - إتقان برو</title>
+    <title>Thank You for Registering - Etqan Pro</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.hugeicons.com/font/hgi-stroke-rounded.css" />
     <link rel="stylesheet" href="../../new-style.css" />
@@ -13,28 +13,28 @@
     <script src="../../app.js"></script>
 </head>
 <body style="font-family: Tajawal, sans-serif; margin: 0; padding: 0; background-color: #fff;direction: ltr;">
-    <div class="flex justify-center w-full h-screen">
+<div class="flex justify-center w-full h-screen">
 
         <!-- Right Section -->
         <div class="p-20 lg:w-1/2 flex flex-col justify-center items-center relative">
             <!-- Logo -->
-            <img src="https://co.itqanpro.co/assets2/images/logo.png" alt="شعار إتقان برو" class="w-[108px] absolute top-8 right-5">
+            <img src="https://co.itqanpro.co/assets2/images/logo.png" alt="Etqan Pro Logo" class="w-[108px] absolute top-8 right-5">
 
             <!-- Content -->
             <div class="text-center">
-                <h1 class="text-2xl font-bold mb-5 text-gray-800">شكرًا لتسجيلك!</h1>
+                <h1 class="text-2xl font-bold mb-5 text-gray-800">Thank you for registering!</h1>
                 <p class="text-sm leading-relaxed mb-5 text-gray-800">
-                    يسرنا في <strong>إتقان برو</strong> أن نرحب بكم ضمن عائلتنا. لقد تم تسجيل حسابكم بنجاح، ويسعدنا انضمامكم إلى مجتمعنا. نحن نسعى لتحقيق رؤيتنا في تمكين المنشآت من تحقيق أهدافها بفعالية من خلال تقديم خدمات احترافية ومتكاملة، مع التركيز على الابتكار والجودة في كل ما نقدمه. يمكنكم الآن البدء في استكشاف خدماتنا والاستفادة من المزايا التي صممت خصيصًا لدعم نموكم المستدام.
+                    We at <strong>Etqan Pro</strong> are pleased to welcome you to our family. Your account has been successfully registered, and we are happy to have you join our community. We strive to achieve our vision of empowering organizations to reach their goals effectively by providing professional and integrated services, focusing on innovation and quality in everything we offer. You can now start exploring our services and benefit from the features designed specifically to support your sustainable growth.
                 </p>
                 
                 <!-- Button -->
                 <a href="#" class="inline-block px-5 py-2.5 bg-[#377dff] text-white no-underline rounded-md text-xl mt-8 transition-all duration-300 hover:bg-[#113d75]">
-                    اذهب إلى الصفحة الرئيسية
+                    Go to Homepage
                 </a>
 
                 <!-- Social Icons -->
                 <div class="mt-10">
-                    <p class="text-gray-800 text-sm mb-2.5">تابعنا على وسائل التواصل الاجتماعي:</p>
+                    <p class="text-gray-800 text-sm mb-2.5">Follow us on social media:</p>
                     <div class="flex justify-center gap-2.5">
                         <a href="https://facebook.com">
                             <img src="https://img.icons8.com/color/48/000000/facebook-new.png" alt="Facebook" class="w-[30px] h-[30px]">
