--- a/pages/auth/otp-en.html
+++ b/pages/auth/otp-en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول / التسجيل</title>
+    <title>Login / Register</title>
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.hugeicons.com/font/hgi-stroke-rounded.css" />
@@ -16,12 +16,12 @@
     <script src="../../app.js"></script>
 </head>
 <body style="direction: ltr;">
-    <div class="container h-screen">
+        <div class="container h-screen">
         <div class="right-section items-center justify-center flex flex-col relative">
             <img src="../../src/images/logo.png" class="w-[108px] logo absolute top-8 right-3">
             <div id="registerForm" class="form-container text-center">
-                <h1 class=" text-2xl font-bold mb-3">أدخل رمز التحقق</h1>
-                <p class="">تم إرسال رمز التحقق إلى بريدك الالكتروني ib****@gmail.com
+                <h1 class=" text-2xl font-bold mb-3">Enter Verification Code</h1>
+                <p class="">A verification code has been sent to your email ib****@gmail.com
                 </p>
                 <form class="items-center flex flex-col">
                     <div class="otp-container my-10">
@@ -34,19 +34,19 @@
                     </div>
                     <a href="" class="bg-green-600 text-white font-bold py-2 px-4 rounded-full flex items-center justify-center mb-5">
                         <span class="hgi-stroke hgi-login-01 icon font-17 mx-1"></span>
-                        تأكيد
+                        Confirm
                     </a>
                     <div class="flex items-center justify-center flex-wrap gap-5">
                         <button class=" text-gray-700">
                             <span class="hgi-stroke hgi-repeat icon mx-1"></span>
-                            إعادة ارسال الرمز
+                            Resend Code
                         </button>
                         <a href="" class=" text-red-600">
                             <span class="hgi-stroke hgi-logout-04 icon font-17 mx-1"></span>
-                            تسجيل الخروج
+                            Logout
                         </a>
                     </div>
-                    <p class="text-center my-10">إذا كنت تواجه مشكلة في تسجيل الدخول تواصل مع خدمة العملاء
+                    <p class="text-center my-10">If you are having trouble logging in, please contact customer service.
                     </p>
             </div>
         </div>
